--- a/sites/all/themes/tm/sass/_single.scss
+++ b/sites/all/themes/tm/sass/_single.scss
@@ -682,3 +682,8 @@
     }
   }
 }
+
+/* not sure why but the messages are pushed down */
+.header-wrapper {
+  margin-top: -3rem;
+}
